# buildkite-jobify

./: .dockerignore  .mergify.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  publish.sh  release.toml
.ci/: jobify.dockerfile
.github/workflows/: ci.yml
buildkite/: artifact.gql  jobs.gql  org.gql  schema.gql  schema.json
examples/: jobify.toml
specs/: debug_deploy.sh  deployment.yaml
src/: jobifier.rs  k8s.rs  lib.rs  main.rs  monitor.rs  scheduler.rs
src/k8s/: client.rs  config.rs
src/k8s/config/: apis.rs  incluster.rs  kube_config.rs  mod.rs  utils.rs
