[package]
name = "buildkite-jobify"
version = "0.4.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "A service that picks up work and configuration from Buildkite, and creates Kubernetes jobs to fulfill those requests"
license = "MIT/Apache-2.0"
repository = "https://github.com/EmbarkStudios/buildkite-jobify"
readme = "README.md"
keywords = ["buildkite", "k8s", "kubernetes", "ci"]
publish = false # not yet

[dependencies]
anyhow = "1.0.26"
app_dirs2 = "2.0.4"
base64 = "0.11.0"
bytes = "0.5.4"
crossbeam = "0.7.3"
flate2 = { version = "1.0.13", default-features = false, features = ["rust_backend"] }
futures = "0.3.4"
graphql_client = "0.8.0"
http = "0.2.0"
lru_time_cache = "0.9.0"
openssl = { version = "0.10.28", features = ["vendored"] }
reqwest = { version = "0.10.2", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8.11"
tar = "0.4.26"
toml = "0.5.6"
structopt = "0.3.9"
tame-oauth = { version = "0.4.2", features = ["gcp"] }
tracing = "0.1.12"
tracing-subscriber = "0.2.1"
twox-hash = "1.5.0"
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }

[dependencies.tokio]
version = "0.2.11"
features = ["rt-threaded", "rt-util", "macros", "time"]

[dependencies.k8s-openapi]
version = "0.7.1"
features = ["v1_17"]
