[package]
name = "buildkite-jobify"
version = "0.4.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "A service that picks up work and configuration from Buildkite, and creates Kubernetes jobs to fulfill those requests"
license = "MIT/Apache-2.0"
repository = "https://github.com/EmbarkStudios/buildkite-jobify"
readme = "README.md"
keywords = ["buildkite", "k8s", "kubernetes", "ci"]

[dependencies]
anyhow = "1.0"
app_dirs2 = "2.0"
base64 = "0.12"
bytes = "0.5"
crossbeam = "0.8"
flate2 = { version = "1.0.13", default-features = false, features = ["rust_backend"] }
futures = "0.3"
graphql_client = "0.8"
http = "0.2"
lru_time_cache = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tar = "0.4"
toml = "0.5"
structopt = "0.3"
tame-oauth = { version = "0.4", features = ["gcp"] }
tracing = "0.1"
tracing-subscriber = "0.2"
twox-hash = "1.5"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

[dependencies.tokio]
version = "0.2"
features = ["rt-threaded", "rt-util", "macros", "time"]

[dependencies.k8s-openapi]
version = "0.7"
features = ["v1_17"]
