[package]
name = "buildkite-jobify"
version = "0.6.2"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2021"
description = "A service that picks up work and configuration from Buildkite, and creates Kubernetes jobs to fulfill those requests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/buildkite-jobify"
readme = "README.md"
keywords = ["buildkite", "k8s", "kubernetes", "ci"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
app_dirs2 = "2.3"
base64 = "0.13"
bytes = "1.0"
camino = "1.0"
clap = { version = "3.2", features = ["derive"] }
crossbeam = "0.8"
flate2 = { version = "1.0", default-features = false, features = [
    "rust_backend",
] }
futures = "0.3"
graphql_client = "0.11"
http = "0.2"
lru_time_cache = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
toml = "0.5"
tame-oauth = { version = "0.7", features = ["gcp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
twox-hash = { version = "1.6", default-features = false }
uuid = { version = "1.1", default-features = false, features = ["v4"] }

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "time"]

[dependencies.k8s-openapi]
version = "0.15"
features = ["v1_23"]
